bat.bool1.diff21.Diff21.scala.error
Erreur de compilation :
Diff21:2: error: type mismatch;
 found   : Unit
 required: Int
def diff21(n:Int): Int = {
                         ^